# Telegram-ASR-Bot

./: .env.sample  .gitignore  README.md  bot.py  exception.py  main.py  pyproject.toml  speech.py  storage.py  voice_manager.py
